home/immich/machine-learning.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  labels:
    app.kubernetes.io/service: immich-machine-learning
    app.kubernetes.io/name: immich-machine-learning
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: immich-machine-learning
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  labels:
    app.kubernetes.io/name: immich-machine-learning
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-machine-learning
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-machine-learning
    spec:
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v1.135.0-openvino
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3003
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
              ephemeral-storage: 128Mi
              gpu.intel.com/i915: "1"
            limits:
              cpu: 4000m
              memory: 2048Mi
              ephemeral-storage: 256Mi
              gpu.intel.com/i915: "1"
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
