home/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
    ingress.kubernetes.io/proxy-body-size: "10G"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Get Homepage configuration
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Photo gallery
    gethomepage.dev/group: Home
    gethomepage.dev/icon: immich.png
    gethomepage.dev/name: Immich
    gethomepage.dev/widget.type: "immich"
    gethomepage.dev/widget.url: "http://immich-server:2283"
    gethomepage.dev/widget.key: "<homepage-immich-key>"
    gethomepage.dev/widget.version: "2"
spec:
  ingressClassName: nginx
  rules:
    - host: gallery.<homelab-domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
  tls:
    - hosts:
        - gallery.<homelab-domain>
      secretName: "gallery.<homelab-domain>-cert"
